Ticket #12839 (closed defect: fixed)

Opened 2 years ago

Last modified 8 months ago

wxTextCtrl::SetDefaultStyle() does not work on Mac/Cocoa

Reported by: mrx3000 Owned by:
Priority: normal Milestone:
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

as subject says, wxTextCtrl::SetDefaultStyle() does not work on Mac/Cocoa build of wx 2.9-svn.
At the same time SetStyle() does work.

To verify, build sample "text" application and check text output. Lines that have style set with SetStyle() do have proper colors, while lines that rely on SetDefaultStyle() remain black and unmodified.

Change History

Changed 8 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72892]) Implement setting default wxTextCtrl style in wxOSX.

Use NSTextView setTypingAttributes to change the attributes used for the new
text by default as setting them for the selected region didn't do anything
useful under OS X (and did nothing at all when there was no selection).

Closes #12839.

Note: See TracTickets for help on using tickets.